<resources>
    <string name="app_name">GigaPet</string>
    <string name="game_version">0.1.3</string>

    <string name="OpenSaveHelp">CONTINUE</string>
    <string name="StartNewHelp">START NEW GAME</string>
    <string name="ChoosePet">CHOOSE YOUR PET</string>
    <string name="EatTitle">EATING TIME!!</string>
    <string name="DrinkTitle">DRINKING TIME!!</string>
    <string name="SkinTitle">NEW SKIN TIME!!</string>
    <string name="BackgroundTitle">NEW BACKGROUND TIME!!</string>

    <string name="tvToTal">Total : </string>


    <!-- Pet status -->
    <string name="hunger">Hunger</string>
    <string name="thirsty">Thirsty</string>
    <string name="bladder">Bladder</string>
    <string name="hygiene">Hygiene</string>
    <string name="fun">Fun</string>
    <string name="energy">Energy</string>

    <!-- Button -->
    <string name="start_now">START NOW!!</string>
    <string name="choose_now">CHOOSE PET</string>

    <string name="sound">Sound</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="current_background">Current Background</string>
    <string name="current_skin">Current Skin</string>


    <!-- err mess -->
    <string name="err_mess_input_name">Please input your name before start new!</string>
    <string name="err_mess_failed_new_game">Failed to create a new game, please try again!</string>
    <string name="err_cantdo">You cant do this action right now!</string>

    <!-- Header -->
    <string name="shop">Shop</string>
    <string name="setting">Setting</string>
    <string name="up_level_title">HEART INCREASED!</string>
    <string name="evo_title">YOUR PET IS EVOLVING!</string>
    <string name="namePet">sahara</string>


    <!-- In game mess -->
    <string name="bad_feeling_notice">Oh no, your pet have bad feeling right now and lost a heart, please take care it carefully!</string>
    <string name="energy_low_notice">Your pet is very tired now, please let it have some rest first!</string>


    <string name="categories">Category</string>
    <string name="last_time">Last time played: </string>
    <string name="welcome_mess">Welcome to GigaPet! Lets have fun together!</string>
    <string name="bathnow">Take a shower and bath right now....</string>
    <string name="gooutnow">Go outside and playing....</string>
    <string name="bath_finish">Few, more cleaner now!!</string>
    <string name="out_finish">So much fun. Receive: {money} golds!</string>
    <string name="toiletnow">Toilet-ing....</string>
    <string name="toilet_finish">Yay, feel more better now!</string>
    <string name="money_not_enough">You dont have enough money to buy this item!</string>
    <string name="background_existed">You already had this background!</string>
    <string name="buy_ok">You have just bought a new item!</string>
    <string name="confirm_buy_title">Buy item?</string>
    <string name="confirm_buy_body">Do you want to buy this item?</string>
    <string name="sleeping_text">Sleeping, dreaming....</string>
    <string name="eat_success">Your pet have just eaten 1 item!</string>
    <string name="drink_success">Your pet have just drunk 1 item!</string>
    <string name="skin_success">Your pet have changed to a new skin!</string>
    <string name="confirm_use_title">Use this item?</string>
    <string name="confirm_use_body">Do you want to use this item?</string>
    <string name="item_out">You dont have any of this item left, please buy more!</string>
    <string name="bad_feeling_warning">Hey master, Im having a bad feeling right now, please take care of me.</string>


    <string name="intro_title">Developers Introduction</string>
    <string name="introduction"><![CDATA[GigaPet v{version}\n
A game that made by Group 2 - Android Developing 2\n
Leading by: Tran Minh Phat\n
Contact: 0937348373\n
Have fun!!]]></string>

    <string name="up_level_body">Congratulation! Your pet has just increased 1 heart, make him/her happy and it will surprise you!</string>
    <string name="evo_body">Congratulation! Your pet has just evolved to a new FORM!</string>
    <string name="title_activity_eat">EatActivity</string>
    <string name="title_activity_drink">DrinkActivity</string>
</resources>
