<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/BackgroundYard"
    tools:context="com.sethphat.gigapet.MainGameActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7">

        <ImageView
            android:id="@+id/imgInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:tint="@color/colorAccent"
            android:src="@drawable/ic_info_black_36dp" />

        <ImageView
            android:id="@+id/imgSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:tint="@color/colorAccent"
            android:src="@drawable/ic_settings_black_36dp" />

        <!-- Button player left -->
        <Button
            android:id="@+id/btnShop"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/imgInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SHOP"/>

        <Button
            android:id="@+id/btnWC"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/btnShop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="WC"/>

        <Button
            android:layout_alignParentLeft="true"
            android:layout_below="@id/btnWC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SHOWER"/>


        <!-- Button player right -->
        <Button
            android:id="@+id/btnGoOut"
            android:layout_alignParentRight="true"
            android:layout_below="@id/imgSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Go Out"/>

        <Button
            android:id="@+id/btnEat"
            android:layout_alignParentRight="true"
            android:layout_below="@id/btnGoOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="EAT"/>

        <Button
            android:id="@+id/btnDrink"
            android:layout_alignParentRight="true"
            android:layout_below="@id/btnEat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="DRINK"/>

        <!-- PET Info -->

        <TextView
            android:layout_marginTop="5dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/PetName"
            android:background="@drawable/rounded_corner"
            android:text="Chú Võ"/>

        <ImageView
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_width="@dimen/petSize"
            android:layout_height="@dimen/petSize"
            android:src="@drawable/dog_sprite" />

        <LinearLayout
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:gravity="center"
            android:padding="10dp"
            android:orientation="horizontal"
            android:divider="@drawable/linear_divider"
            android:showDividers="middle"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/heart"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/heart"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/heart"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/heart"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/heart"/>
        </LinearLayout>

    </RelativeLayout>

    <TableLayout
        style="@style/PetStatus"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="10dp"
        android:layout_weight="2">

        <TableRow
            android:layout_weight="1"
            android:gravity="center">
            <TextView
                android:textColor="#000000"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:textAlignment="center"
                android:text="@string/hunger"/>

            <ProgressBar
                android:layout_weight="3"
                style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:progress="25" />

            <TextView
                android:textColor="#000000"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:textAlignment="center"
                android:text="@string/thirsty" />

            <ProgressBar
                android:layout_weight="3"
                style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="4"
                android:progress="25" />
        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:gravity="center">
            <TextView
                android:textColor="#000000"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:textAlignment="center"
                android:text="@string/hygiene"/>

            <ProgressBar
                android:layout_weight="3"
                style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:progress="25" />

            <TextView
                android:textColor="#000000"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:textAlignment="center"
                android:text="@string/bladder" />

            <ProgressBar
                android:layout_weight="3"
                style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="4"
                android:progress="25" />
        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:gravity="center">
            <TextView
                android:textColor="#000000"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:textAlignment="center"
                android:text="@string/energy"/>

            <ProgressBar
                android:layout_weight="3"
                style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:progress="25" />

            <TextView
                android:textColor="#000000"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:textAlignment="center"
                android:text="@string/fun" />

            <ProgressBar
                android:layout_weight="3"
                style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="4"
                android:progress="25" />
        </TableRow>
    </TableLayout>

</LinearLayout>
